resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-deployment
  labels:
    app: primary
spec:
  replicas: 3
  selector:
    matchLabels:
      app: primary
  template:
    metadata:
      labels:
        app: primary
    spec:
      containers:
      - name: primary
        image: 782638322607.dkr.ecr.ap-northeast-2.amazonaws.com/theci:d042afb7179b1ef21511cb2be7531caae811dfdc
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary
  labels:
    app: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary
  template:
    metadata:
      labels:
        app: canary
    spec:
      containers:
      - name: canary
        image: 782638322607.dkr.ecr.ap-northeast-2.amazonaws.com/theci:d042afb7179b1ef21511cb2be7531caae811dfdc
        ports:
        - containerPort: 80
