resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-home
spec:
  selector:
    app: test-home
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
