resources/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-canary-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - my-gateway
  http:
    - match:
        - uri:
            prefix: /
    - route:
        - destination:
            host: primary-service
            port:
              number: 80
          weight: 80
        - destination:
            host: canary-service
            port:
              number: 80
          weight: 20
